--- a/client/src/stylesheets/css/chatbox.css
+++ b/client/src/stylesheets/css/chatbox.css
@@ -9,7 +9,7 @@
   overflow-wrap: break-word;
   flex-direction: column-reverse;
   justify-content: flex-start;
-  font-size: 1.15rem;
+  font-size: 1.5rem;
   padding: 0.5em; }
 
 .enterText {
@@ -19,9 +19,12 @@
   border: 3px solid #b9bcdf;
   font-size: 1rem;
   display: flex;
-  align-items: flex-end; }
+  align-items: flex-end;
+  font-size: 22px; }
 
 button.send-btn {
   width: 280px;
   background-color: #b9bcdf;
-  border: none; }
+  border: none;
+  font-size: 22px;
+  font-weight: bold; }
