--- a/client/src/stylesheets/sass/variables.scss
+++ b/client/src/stylesheets/sass/variables.scss
@@ -1,4 +1,5 @@
-$font-family: "Poppins", sans-serif;
+$font-family: 'Darker Grotesque', sans-serif;
+$font-title: 'Urbanist', sans-serif;
 
 $white: #fff;
 $black: #000;
