--- a/client/src/stylesheets/css/index.css
+++ b/client/src/stylesheets/css/index.css
@@ -1,1 +1,8 @@
-@import"https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@100&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap";@import"https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@200&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap";*{box-sizing:border-box}body{margin:0;font-family:"Poppins",sans-serif}
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@200&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;700&family=Urbanist:wght@300;700&display=swap");
+* {
+  box-sizing: border-box; }
+
+body {
+  margin: 0;
+  font-family: "Darker Grotesque", sans-serif; }
