--- a/client/src/stylesheets/css/navigation.css
+++ b/client/src/stylesheets/css/navigation.css
@@ -1,1 +1,42 @@
-.navbar{display:flex;justify-content:space-around;width:100%;background:#d8d7ff}.navbar h3:hover{color:#8c8ea7}.navbar .logo{display:flex;justify-content:center;margin-left:3em}.navbar .home-profile-about{margin-left:1.5em;display:flex;justify-content:center;align-items:center}.navbar .home-profile-about .nav-link{color:#000;text-decoration:none}.navbar .nav-right{display:flex}.navbar .nav-right Button{width:80%;font-size:1.45rem;color:#fff;background-color:#8c8ea7;border:none;margin-right:2em}.navbar .nav-right Button:hover{background-color:#676a81}.exit-btn{font-size:2rem;width:100%;display:flex;justify-content:flex-end}
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background: white; }
+  .navbar h3 {
+    font-family: "Urbanist", sans-serif;
+    font-size: 20px;
+    text-transform: uppercase; }
+  .navbar h3:hover {
+    color: #8c8ea7; }
+  .navbar .logo {
+    display: flex;
+    justify-content: center;
+    margin-left: 3em; }
+  .navbar .home-profile-about {
+    margin-left: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .navbar .home-profile-about .nav-link {
+      color: black;
+      text-decoration: none; }
+  .navbar .nav-right {
+    display: flex; }
+    .navbar .nav-right Button {
+      width: 80%;
+      font-size: 20px;
+      font-weight: 400;
+      color: white;
+      background-color: #676a81;
+      border: none;
+      margin-right: 2em;
+      text-transform: uppercase; }
+      .navbar .nav-right Button:hover {
+        background-color: #8c8ea7; }
+
+.exit-btn {
+  font-size: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end; }
