--- a/client/src/stylesheets/css/profile.css
+++ b/client/src/stylesheets/css/profile.css
@@ -1,1 +1,128 @@
-.profile-page{background-color:"white"}.profile-page .profile-container{margin:auto;display:flex;justify-content:space-evenly;height:100vh;width:100vw}.profile-page .profile-container .left-profile{width:50%;display:flex;flex-direction:column;align-items:center;height:100%}.profile-page .profile-container .left-profile .profile-photo{margin-top:6em;display:flex;justify-content:center;height:25vw;width:25vw;border-radius:25vw;background-repeat:no-repeat}.profile-page .profile-container .left-profile .profile-photo img{border-radius:50%;min-width:100%;min-height:100%}.profile-page .profile-container .profile-name{background-color:#c3afd4;border-radius:20px;display:flex;justify-content:center;margin-top:2.5em;width:50%}.profile-page .profile-container .right-profile{width:50%;height:100%}.profile-page .profile-container .right-profile .itineraries-container{margin-top:5em;margin-bottom:2em;border-radius:40px;background-color:#d8d7ff;height:55vh;width:37.5vw;display:flex;overflow:auto;overflow-wrap:break-word;flex-direction:column;justify-content:flex-start;font-size:1.15rem}.profile-page .profile-container .right-profile .itineraries-container h1{padding-top:.5em;padding-bottom:.35em;padding-left:1em}.profile-page .profile-container .right-profile .create-btn{background-color:#8c8ea7;border:none;border-radius:20px;width:75%;padding:0px}.profile-page .profile-container .right-profile .create-btn h3{display:flex;justify-content:center;align-items:center}.profile-page .profile-container .right-profile .create-btn :hover{background-color:#676a81;border-radius:20px}.board-list-items{color:#000}
+.profile-page {
+  background-color: #f1f1f1;
+  height: 100vh;
+  display: flex;
+  justify-content: center; }
+  .profile-page .profile-container {
+    background-color: white;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+    height: 65vh;
+    width: 80vw;
+    border-radius: 40px;
+    position: absolute;
+    margin-top: 4em;
+    box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+    .profile-page .profile-container .left-profile {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100%;
+      position: relative;
+      z-index: 1; }
+      .profile-page .profile-container .left-profile .profile-bg {
+        background-image: url("../../images/profile.jpg");
+        background-size: cover;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+        filter: opacity(50%); }
+      .profile-page .profile-container .left-profile .profile-photo {
+        margin-top: 3.5em;
+        display: flex;
+        justify-content: center;
+        height: 17vw;
+        width: 17vw;
+        border-radius: 25vw;
+        background-repeat: no-repeat;
+        box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+        .profile-page .profile-container .left-profile .profile-photo img {
+          border-radius: 50%;
+          min-width: 100%;
+          min-height: 100%; }
+    .profile-page .profile-container .profile-name {
+      background-color: #c3afd4;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      margin-top: 2.5em;
+      width: 50%; }
+      .profile-page .profile-container .profile-name h3.nameEmphasis {
+        font-size: 50px;
+        font-weight: bold;
+        color: #615669; }
+    .profile-page .profile-container .right-profile {
+      width: 50%;
+      height: 100%; }
+      .profile-page .profile-container .right-profile .itineraries-container {
+        margin-bottom: 2em;
+        border-top-right-radius: 40px;
+        border-bottom-right-radius: 40px;
+        background-color: #d8d7ff;
+        height: 65vh;
+        width: 40.1vw;
+        display: flex;
+        overflow: auto;
+        overflow-wrap: break-word;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        font-size: 1.15rem; }
+        .profile-page .profile-container .right-profile .itineraries-container .boardsTitle {
+          background-color: white;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          padding-bottom: 2em; }
+        .profile-page .profile-container .right-profile .itineraries-container h1 {
+          margin-top: 1.5em;
+          margin-bottom: 0;
+          font-size: 2em;
+          text-transform: uppercase;
+          font-family: "Urbanist", sans-serif;
+          font-weight: bold;
+          color: #d8d7ff;
+          text-shadow: 2px 2px #a7a7a7; }
+        .profile-page .profile-container .right-profile .itineraries-container .board-grid {
+          display: grid;
+          justify-items: center;
+          grid-template-columns: 15em 15em;
+          grid-template-rows: auto;
+          margin-top: 2em; }
+      .profile-page .profile-container .right-profile .create-new-board {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0; }
+        .profile-page .profile-container .right-profile .create-new-board :hover {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 2px;
+          border-radius: 20px;
+          background-color: #676a81; }
+        .profile-page .profile-container .right-profile .create-new-board .bi-plus-circle {
+          margin-right: 10px; }
+          .profile-page .profile-container .right-profile .create-new-board .bi-plus-circle:hover {
+            margin-right: 10px; }
+      .profile-page .profile-container .right-profile .create-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #8c8ea7;
+        border: none;
+        border-radius: 20px;
+        width: 75%;
+        height: 50px;
+        margin: 2px;
+        text-transform: uppercase;
+        padding: 0;
+        font-size: 30px; }
+
+.board-list-items {
+  color: black; }
