--- a/client/src/stylesheets/sass/App.scss
+++ b/client/src/stylesheets/sass/App.scss
@@ -1,8 +1,5 @@
 @import "./variables.scss";
 .App {
   text-align: left;
-  font-family: "Poppins", sans-serif;
-  h3 {
-    margin-bottom: 0;
-  }
+  font-family: $font-family;
 }
