--- a/client/src/stylesheets/sass/index.scss
+++ b/client/src/stylesheets/sass/index.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@100&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
+
 
 @import url("https://fonts.googleapis.com/css2?family=Bungee&family=Poppins:wght@200&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;700&family=Urbanist:wght@300;700&display=swap');
 @import "./variables.scss";
 //@import "./reset.scss";
 
