--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -4,13 +4,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .about-page .about-people {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-right: 60px; }
+  padding-right: 60px;
+}
 
 .about-page .about-people .person {
   display: flex-end;
@@ -20,10 +22,12 @@
   border: 3px solid rgba(160, 240, 252, 0);
   margin: 3rem;
   width: 25vw;
-  height: 40vh; }
+  height: 40vh;
+}
 
 .about-page .about-stack {
-  display: flex; }
+  display: flex;
+}
 
 .about-page .thank-you {
   display: flex;
@@ -33,78 +37,105 @@
   position: absolute;
   z-index: 4;
   padding-top: 150em;
-  padding-bottom: 30em; }
+  padding-bottom: 30em;
+}
 
 .occupation {
   color: black;
   font-weight: bold;
   font-size: 25px;
-  padding-top: 1em; }
+  padding-top: 1em;
+}
 
 .textAlign {
   text-align: center;
   margin-left: 0;
   margin-right: 0;
   padding-left: 2em;
-  padding-right: 2em; }
+  padding-right: 2em;
+}
 
 .head {
   color: white;
-  text-shadow: -0.5px -0.5px #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000; }
+  text-shadow: -0.5px -0.5px #000000, 1px -1px 0 #000000, -1px 1px 0 #000000,
+    1px 1px 0 #000000;
+}
 
 .title {
   color: black;
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins", sans-serif;
+}
 
 .thick {
-  text-shadow: -0.5px -0.5px #000000, 0.5px -0.5px 0 #000000, -0.5px 0.5px 0 #000000, 0.5px 0.5px 0 #000000; }
+  text-shadow: -0.5px -0.5px #000000, 0.5px -0.5px 0 #000000,
+    -0.5px 0.5px 0 #000000, 0.5px 0.5px 0 #000000;
+}
 
 .bold {
   color: white;
-  text-shadow: -2px -2px 0 #1986c9, 1px -1px 0 #1986c9, -1px 1px 0 #1986c9, 1px 1px 0 #1986c9; }
+  text-shadow: -2px -2px 0 #1986c9, 1px -1px 0 #1986c9, -1px 1px 0 #1986c9,
+    1px 1px 0 #1986c9;
+}
 
 .emphasize {
   color: white;
-  text-shadow: -1px -1px 0 #460eb6, 2px -2px 0 #460eb6, -1px 1px 0 #460eb6, 1px 1px 0 #460eb6; }
+  text-shadow: -1px -1px 0 #460eb6, 2px -2px 0 #460eb6, -1px 1px 0 #460eb6,
+    1px 1px 0 #460eb6;
+}
 
 .outline {
   color: white;
-  text-shadow: -1.5px -1.5px 0 #459102, 1px -1px 0 #459102, -2px 2px 0 #459102, 1.5px 1.5px 0 #459102; }
+  text-shadow: -1.5px -1.5px 0 #459102, 1px -1px 0 #459102, -2px 2px 0 #459102,
+    1.5px 1.5px 0 #459102;
+}
 
 .pop {
-  animation: pop 0.5s ease-in-out; }
+  animation: pop 0.5s ease-in-out;
+}
 
 .with-delay {
-  animation-delay: 2s; }
+  animation-delay: 2s;
+}
 
 @keyframes pop {
   50% {
-    transform: scale(1.25); } }
+    transform: scale(1.25);
+  }
+}
 .popsec {
-  animation: pop 1s ease-in-out; }
+  animation: pop 1s ease-in-out;
+}
 
 .with-delay {
-  animation-delay: 12s; }
+  animation-delay: 12s;
+}
 
 @keyframes pop {
   50% {
-    transform: scale(1.25); } }
+    transform: scale(1.25);
+  }
+}
 .popthird {
-  animation: pop 1.5s ease-in-out; }
+  animation: pop 1.5s ease-in-out;
+}
 
 .with-delay {
-  animation-delay: 22s; }
+  animation-delay: 22s;
+}
 
 @keyframes pop {
   50% {
-    transform: scale(1.25); } }
+    transform: scale(1.25);
+  }
+}
 /*Bernadette's Card*/
 .card-one {
   background-color: transparent;
   width: 25vw;
   height: 40vh;
   perspective: 1000px;
-  margin-right: 40px; }
+  margin-right: 40px;
+}
 
 .flip-card-inner {
   position: relative;
@@ -113,10 +144,12 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
 
 .card-one:hover .flip-card-inner {
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 .one-front,
 .one-back {
@@ -124,17 +157,20 @@
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 .one-front {
   background-color: #c2f7ff;
-  color: white; }
+  color: white;
+}
 
 .one-back {
   background-color: #adf3fe;
   color: black;
   text-shadow: none;
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 /*Stephanie's Card*/
 .card-two {
@@ -142,7 +178,8 @@
   width: 25vw;
   height: 40vh;
   perspective: 1000px;
-  margin-right: 40px; }
+  margin-right: 40px;
+}
 
 .flip-inner {
   position: relative;
@@ -151,10 +188,12 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
 
 .card-two:hover .flip-inner {
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 .two-front,
 .two-back {
@@ -162,17 +201,20 @@
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 .two-front {
   background-color: #f0d1fa;
-  color: white; }
+  color: white;
+}
 
 .two-back {
   background-color: #edb6ff;
   color: black;
   text-shadow: none;
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 /*Bles's Cards*/
 .card-three {
@@ -180,7 +222,8 @@
   width: 25vw;
   height: 40vh;
   perspective: 1000px;
-  margin-right: 40px; }
+  margin-right: 40px;
+}
 
 .flip-in {
   position: relative;
@@ -189,10 +232,12 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536); }
+  box-shadow: 0 4px 8px 0 rgba(38, 45, 46, 0.536);
+}
 
 .card-three:hover .flip-in {
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 .three-front,
 .three-back {
@@ -200,90 +245,112 @@
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 .three-front {
   background-color: #bff5e3;
-  color: white; }
+  color: white;
+}
 
 .three-back {
   background-color: #a5fadd;
   color: black;
   text-shadow: none;
-  transform: rotateY(180deg); }
+  transform: rotateY(180deg);
+}
 
 .Bernadette {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .Stephanie {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .Blesilda {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .tinyName {
   font-size: 34px;
-  padding-top: 0.5em; }
+  padding-top: 0.5em;
+}
 
 .smallName {
   font-size: 38px;
-  padding-top: 0.5em; }
+  padding-top: 0.5em;
+}
 
 .miniName {
   font-size: 38px;
-  padding-top: 0.5em; }
+  padding-top: 0.5em;
+}
 
 /*Link color change*/
 .githubLink {
   color: #000000;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .githubLink:hover {
   color: #58c0f0;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .emailLink {
   color: #000000;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .emailLink:hover {
   color: #eba800;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .back-text {
-  height: 60%; }
+  height: 60%;
+}
 
 .follow-me {
   height: 15%;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .ppg {
   display: flex;
   justify-content: flex-end;
   height: 25%;
-  width: 98%; }
+  width: 98%;
+}
 
 .ppg img {
   width: 100px;
   height: 100px;
   border-radius: 100px;
-  border: 3px black solid; }
+  border: 3px black solid;
+}
 
 #create-space {
   background-color: white;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+}
 
 .stack-list {
-  margin-top: 1em; }
+  margin-top: 1em;
+}
 
 .first-line {
   display: flex;
   flex-wrap: wrap;
-  align-items: center; }
+  align-items: center;
+}
 
 .red {
   color: #ffcc00;
-  text-shadow: -1.5px -1.5px 0 #ffff07, 1px -1px 0 #ffff07, -2px 2px 0 #ffff07, 1.5px 1.5px 0 #ffff07; }
+  text-shadow: -1.5px -1.5px 0 #ffff07, 1px -1px 0 #ffff07, -2px 2px 0 #ffff07,
+    1.5px 1.5px 0 #ffff07;
+}
