Changing padding to margin on the thank you container

--- a/client/src/stylesheets/css/about.css
+++ b/client/src/stylesheets/css/about.css
@@ -36,7 +36,7 @@
   justify-content: center;
   position: absolute;
   z-index: 4;
-  padding-top: 150em;
+  margin-top: 150em;
   padding-bottom: 30em;
 }
 
